--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,8 @@ body {
     color:#4A4A48;
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    /*font-family: 'Montserrat', sans-serif;*/
+    font-family: "Apercu", regular;
     font-size: 15px;
     line-height: 1.5;
 }
@@ -74,6 +75,7 @@ h2 {
 }
 h3 {
     margin-bottom: 0px;
+    font-family: "Apercu", regular;
 }
 .item-details h3 + p {
     font-style: italic;
